Update Java version, Gradle version, and other files; renamed XMLExample.txt